cmake_minimum_required(VERSION 2.8)
set(PROJECT_NAME ttm)
set(RELEASE_DATE 2024-03-31)
project(${PROJECT_NAME})

set(SOURCE src/ttm.cpp src/Server.cpp)
set(HEADER src/Common.hpp src/Server.hpp)

add_executable(${PROJECT_NAME} ${SOURCE})

target_link_libraries(${PROJECT_NAME} ev)

install(TARGETS ${PROJECT_NAME} DESTINATION /usr/bin/)

set(CPACK_PACKAGE_NAME "testing-${PROJECT_NAME}" CACHE STRING "Testinng task for TCP mirror server")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "TCP Mirrir C++ application" CACHE STRING "Testinng task for TCP mirror server")
set(CPACK_PACKAGE_VENDOR "Vitaliy.Shirinkin")
set(CPACK_VERBATIM_VARIABLES YES)
set(CPACK_PACKAGE_INSTALL_DIRECTORY ${CPACK_PACKAGE_NAME})
SET(CPACK_OUTPUT_FILE_PREFIX "${CMAKE_SOURCE_DIR}/_packages")
set(CPACK_PACKAGING_INSTALL_PREFIX "/usr/bin")

set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
set(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})

set(CPACK_PACKAGE_CONTACT "vitaliy.shirinkin@gmail.com")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Vitaliy Shirinkin")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
set(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/README.md")

set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
set(CPACK_COMPONENTS_GROUPING ALL_COMPONENTS_IN_ONE)
set(CPACK_DEB_COMPONENT_INSTALL YES)

include(CPack)
